bk_ida/gccida/c2/can_disregard_other_sets
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_disregard_other_sets/src/gcse.c:3889:27: error: use of undeclared identifier 'uid_cuid_1'
v13 = *( ( unsigned int *)uid_cuid_1 + v12); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_disregard_other_sets/src/gcse.c:3890:85: error: use of undeclared identifier 'uid_cuid_1'
v14 = *( unsigned __int64 *)( ( char *)reaching_defs[v11]->elms + ( ( *( ( _DWORD *)uid_cuid_1 + v12) >> 3) & 0x1FFFFFF8)); 
                                                                                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_disregard_other_sets/src/gcse.c:3894:31: error: use of undeclared identifier 'uid_cuid_1'
|| ( int)v13 >= *( ( _DWORD *)uid_cuid_1 + rtint) ) 
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_disregard_other_sets/src/gcse.c:3898:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v18 = ( rtx *)v9[2]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_disregard_other_sets/src/gcse.c:3909:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v15 = ( rtx *)v9[2]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_disregard_other_sets/src/gcse.c:3916:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v17 = ( __int64)v3->insn[2]; 
                ^~~~~~~~~~~
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/can_disregard_other_sets/src/obj/gcse.o] Error 1
